# LabelFusion

./: Atlas.h  CMakeLists.txt  README.md  itkLocalNormalizedCorrelationWeightFilter.h  itkLocalNormalizedCorrelationWeightFilter.hxx  itkWeightedMajorityVotingFilter.h  itkWeightedMajorityVotingFilter.hxx  main.cxx
